# bm_cover_explorer

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: vectorize_covers.ipynb
